@@ -2399,6 +2399,7 @@ void    localprec(long p);
 long    loop_break(void);
 GEN     next0(long n);
 GEN     pareval(GEN C);
+GEN     pari_self(void);
 GEN     parsum(GEN a, GEN b, GEN code, GEN x);
 GEN     parvector(long n, GEN code);
 void    pop_lex(long n);
