@@ -1,0 +1,1 @@
+(n->if(n==0,1,n*self()(n-1)))(5)
